--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,9 +7,9 @@ server:
 spring:
   datasource:
     #url: jdbc:mysql://localhost:3306/non_jpa_db?serverTimezone=UTC&useSSL=false
-    url: jdbc:mysql://localhost:3306/esc_jpa_db?serverTimezone=UTC&useSSL=false
-    username: khweb
-    password: khWeb@123
+    url: jdbc:mysql://k9pkqwlvuzld2kx8:s1r2ci6sgxeyecz5@yjo6uubt3u5c16az.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/qz4x21t4qej1mn8w?serverTimezone=UTC&useSSL=false
+    username: k9pkqwlvuzld2kx8
+    password: s1r2ci6sgxeyecz5
     driver-class-name: com.mysql.cj.jdbc.Driver
     dialect: org.hibernate.dialect.MySQL8Dialect
 
